--- a/pronac.html
+++ b/pronac.html
@@ -35,7 +35,7 @@
 
         <footer>
             <p>Наша адреса:вул.Степана Бандери 10А.</p>
-<p>Детальніша інфориація за номером 123-456-7890 </p>
+<p>Детальніша інформація за номером 123-456-7890 </p>
         
    
       <h2>Відгуки наших клієнтів</h2>
