--- a/dostabka.html
+++ b/dostabka.html
@@ -42,7 +42,7 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2531.7752478061157!2d26.2510801!3d50.6127137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472f1349292fad55%3A0x6fa3fbe2b1f6d79b!2z0LLRg9C70LjRhtGPINCh0YLQtdC_0LDQvdCwINCR0LDQvdC00LXRgNC4LCAxMCwg0KDRltCy0L3QtSwg0KDRltCy0L3QtdC90YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDMzMDE3!5e0!3m2!1suk!2sua!4v1714289821611!5m2!1suk!2sua" width="100%" height="40%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
        <footer>
             <p>Наша адреса:вул.Степана Бандери 10А.</p>
-<p>Детальніша інфориація за номером 123-456-7890 </p>
+<p>Детальніша інформація за номером 123-456-7890 </p>
         
    
       <h2>Відгуки наших клієнтів</h2>
