--- a/pronac.html
+++ b/pronac.html
@@ -1,4 +1,6 @@
  <html>
+   
+ <html>
     <head>
          <title>Магазин меблів</title>
        </head>
@@ -7,9 +9,9 @@
                <h1>Магазин меблів "Затишок"</h1>
                <div class="nav2">
 
-               <a href="index.html">Каталог</a>
-               <a href="dostabka.html">Доставка і оплата</a>
-               <a href="pronac.html">Про нас</a>
+               <a href="#katalog">Каталог</a>
+               <a href="#dostabka">Доставка і оплата</a>
+               <a href="#pronac">Про нас</a>
                </div> 
                 
                    <nav>
@@ -28,6 +30,10 @@
 <p>Раді бачити вас на сайті магазину "Затишок"! Тут ви зможете купити міцні, практичні, сучасні, але при цьому доступні меблі для домашнього та комерційного використання</p>
 <p class="fly">Вибір добротних меблів в будинок, кафе або сад - завдання не з легких. І практично кожен, хто приступає до пошуку, намагається заручитися підтримкою когось більш досвідченого. Однак навіщо покладатися на суб'єктивний досвід сусіда або знайомого, якщо інтернет-магазин меблів Wood Light вже сьогодні проконсультує та допоможе купити відповідні предмети побуту! Забудьте про занепокоєння - відкривайте онлайн-каталог та отримуйте від покупок виключно задоволення.
 </p>
+<h2>Графік роботи</h2>
+<p> Пн-Пт 9:00-20:00
+     Сб 9:00-19:00
+      Нд 10:00-18:00</p>
 <div class="about">
 <img src="https://woodlight.kh.ua/image/cache/catalog/module/onas/ab2-558x0.webp"><p class="ri"><span>ЧОГО ЧЕКАТИ ВІД СПІВПРАЦІ З НАШИМ ІНТЕРНЕТ МАГАЗИНОМ?</span>
 Швидкого та професійного обслуговування, індивідуального підходу до кожної угоди та, звичайно ж, нових красивих меблів українського виробництва! Інтернет-магазин Wood Light - досить молода компанія. Однак за 3 роки роботи ми добре вивчили потреби клієнтів, щоб дивувати виключно приємними моментами. Тому гарантуємо:</p>
@@ -35,7 +41,7 @@
 
         <footer>
             <p>Наша адреса:вул.Степана Бандери 10А.</p>
-<p>Детальніша інформація за номером 123-456-7890 </p>
+<p>Детальніша інфориація за номером 123-456-7890 </p>
         
    
       <h2>Відгуки наших клієнтів</h2>
@@ -43,6 +49,7 @@
       <p>Олег:я нещодавно придбав диван дуже зручний. Рекомендую всім цей магазин! </p>
            </footer>
     </body>
+</html>
 <style>
   
 
