--- a/pronac.html
+++ b/pronac.html
@@ -9,9 +9,9 @@
                <h1>Магазин меблів "Затишок"</h1>
                <div class="nav2">
 
-               <a href="#katalog">Каталог</a>
-               <a href="#dostabka">Доставка і оплата</a>
-               <a href="#pronac">Про нас</a>
+               <a href="index.html">Каталог</a>
+               <a href="dostabka.html">Доставка і оплата</a>
+               <a href="pronac.html">Про нас</a>
                </div> 
                 
                    <nav>
